--- a/index.html
+++ b/index.html
@@ -201,8 +201,21 @@ function memoryFlipTile(tile,val){
 <div class="b25">
 <img src ="border2.jpg" style="background-repeat:repeat-x; width:100px;"/>
 </div>
-
-
+<div class="b26">
+<img src ="border2.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="b27">
+<img src ="border2.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="b28">
+<img src ="border2.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="b29">
+<img src ="border2.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="b30">
+<img src ="border2.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
 <div id="memory_board"></div>
 <div class="cl">
 <div class="fnt">
