--- a/index.html
+++ b/index.html
@@ -157,7 +157,27 @@ function memoryFlipTile(tile,val){
 <div class="b11">
 <img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
 </div>
-
+<div class="d12">
+<img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="d13">
+<img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="d14">
+<img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="d15">
+<img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="d16">
+<img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="d17">
+<img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
+<div class="d18">
+<img src ="borderd.jpg" style="background-repeat:repeat-x; width:100px;"/>
+</div>
 <div class="b12">
 <img src ="border2.jpg" style="background-repeat:repeat-x; width:100px;"/>
 </div>
