--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@ font-size: 50px;color:#FF8C00">Score: <a id="score" style="font-size:40px">0</a>
 <div class= "g5">
 <img src="g5.gif">
 </div>
-	
+<div class= "g6">
+<img src="g6.gif">
+</div>
 </div>
 
 <script>newBoard();</script>
