--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ font-size: 50px;color:#FF8C00">Score: <a id="score" style="font-size:40px">0</a>
 <img src="g1.gif">
 </div>
 <div class= "g2">
-<img src="g2.gif">
+<img src="q2.gif">
 </div>
 <div class= "g3">
 <img src="g3.gif">
