--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ font-size: 50px;color:#FF8C00">Score: <a id="score" style="font-size:40px">0</a>
 <img src="g5.gif">
 </div>
 <div class= "g6">
-<img src="g6.gif">
+<img src="q6.gif">
 </div>
 </div>
 
